<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">CN E-Commute</string>

    <!-- General Labels -->
    <string name="logo">Logo</string>
    <string name="submit">Submit</string>
    <string name="select_file">Select File</string>
    <string name="open_camera">Open Camera &amp; Take Photo</string>
    <string name="report">Report</string>
    <string name="fare_calculator">Fare Calculator</string>

    <string name="choose_problem">Choose the problem you want to report</string>
    <string name="upload_image_here">Upload Image Here</string>
    <string name="report_problem">Report: %1$s</string>

    <!-- NEW AND UPDATED VIOLATIONS -->
    <!-- Parking & Obstruction Violations -->
    <string name="parking_obstruction_violations">Parking and Obstruction Violations</string>
    <string name="corner_intersection_violation">6 Meters from any corner intersection</string>
    <string name="crosswalk_violation">Crosswalk pedestrian lane</string>
    <string name="double_parking_violation">Stopped/parked at the curb / double parking</string>
    <string name="no_parking_sign_violation">At any place where official signs prohibit parking</string>
    <string name="overtime_parking_violation">Parked more than 20 minutes</string>
    <string name="obstruction_violation">Obstruction</string>
    <string name="illegal_terminal_violation">Illegal Terminal</string>


    <!-- Traffic Movement & Road Use Violations -->
    <string name="traffic_movement_violations">Traffic Movement and Road Use Violations</string>
    <string name="left_turn_vinzons_jlukban">Left turn from Vinzons Avenue to J.Lukban and vice versa</string>
    <string name="left_turn_jlukban">Left turn from J.Lukban and vice versa</string>
    <string name="left_turn_vinzons_felipe">Left turn from Vinzons Avenue to Felipe II Street and vice versa</string>
    <string name="u_turn_vinzons">U-turn along Vinzons Avenue</string>
    <string name="left_turn_fpimentel_vbasit">Left turn from F. Pimentel Avenue to V. Basit Street and vice versa</string>
    <string name="left_turn_vbasit_fpimentel">Left turn from V. Basit Street to F. Pimentel Avenue and vice versa</string>
    <string name="out_of_line">Out of Line</string>
    <string name="disregarding_traffic_sign">Disregarding Traffic Sign</string>
    <string name="truck_ban">Truck Ban</string>
    <string name="number_color_coding">Number and color coding</string>
    <string name="loading_unloading_vinzons">Loading/unloading of passengers along Vinzons Avenue (Buses)</string>
    <string name="right_of_way_emergency">Right of way for emergency vehicle</string>
    <string name="jaywalking">Jaywalking</string>


    <!-- Driver Behavior Violations -->
    <string name="driver_behavior_violations">Driver Behavior Violations</string>
    <string name="refuse_to_convey">Refuse to convey passengers</string>
    <string name="abusive_driver">Abusive, arrogant, discourteous driver</string>
    <string name="reckless_driving">Reckless driving</string>
    <string name="dui_liquor">Driving under the influence of liquor</string>
    <string name="hitching">Grabbing or hanging onto a moving vehicle</string>


    <!-- Licensing & Documentation Violations -->
    <string name="licensing_documentation_violations">Licensing and Documentation Violations</string>
    <string name="no_drivers_license">Driving without Drivers License</string>
    <string name="student_permit_use">Driving using Student Permit</string>
    <string name="unregistered_franchise">Unregistered Franchise</string>


    <!-- Attire & Fare Violations -->
    <string name="attire_fare_violations">Attire and Fare Violations</string>
    <string name="improper_attire">Sleeveless shirt, wearing slippers, short pants</string>
    <string name="tricycle_fare_matrix">Tricycle fare and matrix</string>
    <string name="no_helmet">No Helmet</string>


    <!-- Input Placeholder -->
    <string name="enter_violation_details">Enter violation details</string>

    <string name="remove_photo">Remove Photo</string>
    <string name="image_preview">Image Preview</string>
    <string name="remove_image">Remove Image</string>

    <!-- Fare Calculator -->
    <string name="fare_calculator_header">FARE CALCULATOR</string>

    <string name="commuter_no_2">COMMUTER NO. 2</string>
    <string name="commuter_no_3">COMMUTER NO. 3</string>
    <string name="commuter_no_4">COMMUTER NO. 4</string>

    <string name="location_icon">Location Icon</string>
    <string name="destination_icon">Destination Icon</string>
    <string name="starting_location">Starting Location</string>
    <string name="your_destination">Your Destination</string>

    <string name="start_button_1">START</string>
    <string name="stop_button_1">STOP</string>
    <string name="start_button_2">START</string>
    <string name="stop_button_2">STOP</string>
    <string name="start_button_3">START</string>
    <string name="stop_button_3">STOP</string>
    <string name="start_button_4">START</string>
    <string name="stop_button_4">STOP</string>

    <string name="total_fare">TOTAL FARE:</string>
    <string name="fare_amount">₱000.00</string>
    <string name="fare_error">Please set both locations</string>

    <string name="fare_matrix_description">First two (2) kilometers\nPhp 15.00 – 6 years old and above\nPhp 7.00 - 3-5 years old\nPhp 2.00 - for every succeeding kilometer\n\nChild/ren 0-3 years old FREE OF CHARGE, provided they are sitting on the lap of their guardian.\n\n20% DISCOUNT FOR SENIOR CITIZENS, PERSONS WITH DISABILITIES and STUDENTS\nPhp 12.00 - 6 years old and above\nPhp 1.60 - for every succeeding kilometer</string>

    <!-- Sign up -->
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="register_to_get_started">Register to get started</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login_link">Already have an account? Log in</string>
    <string name="signup_link">Dont have an account? Sign up</string>
    <string name="username_field">Username field</string>
    <string name="show_password">Show Password</string>
    <string name="provide_your_login_details_to_proceed">Provide your login details to proceed</string>
    <string name="account">Account</string>
    <string name="history">History</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="open_google_maps">Open Google Maps</string>
    <string name="app_logo_desc">app_logo_desc</string>
    <string name="commuter_icon_desc">commuter_icon_desc</string>
    <string name="driver_icon_desc">driver_icon_desc</string>
    <string name="operator_icon_desc">operator_icon_desc</string>
    <string name="operator">OPERATOR</string>
    <string name="driver">DRIVER</string>
    <string name="commuter">COMMUTER</string>

    <!-- Home Description -->
    <string name="home_description">Welcome to CN E-Com</string>
    <string name="scan_qr_code">First scan the QR Code and get tricycle info.</string>
    <string name="scan_qr_code_desc">Scan QR Code</string>
    <string name="fare_matrix">Use fare calculator to estimate your ride fare efficiently.</string>
    <string name="report_issues">Use the report button to share feedback and complaints.</string>

    <string name="report_history">Report History</string>
    <string name="scanned_qr_codes">Scanned QR Codes</string>

    <string name="toolbar_title_scanned_qr_codes">Scanned QR Codes</string>
    <string name="total_km">TOTAL KM:</string>

    <!-- Account -->
    <string name="account_text">Account</string>
    <string name="driver_name">Driver Name: Krizza</string>
    <string name="profile_picture">Profile Picture</string>

    <string name="notifications">Notifacation</string>

    <string name="driver_info_text">Driver/Operator Information</string>

    <string-array name="age_group_options">
        <item>Choose your age group</item>
        <item>0-2</item>
        <item>3-5</item>
        <item>6 and above</item>
    </string-array>

    <string name="label_driver_name">Driver Name: %1$s</string>
    <string name="label_driver_contact">Driver Contact No.: %1$s</string>
    <string name="operator_sign_in">Operator Sign In</string>
    <string name="Operator_ID">Operator ID</string>
    <string name="commuter_1">COMMUTER 1</string>
    <string name="your_age_group">YOUR AGE GROUP</string>
    <string name="discount_chechbox">Apply Discount (Senior / PWD / Student)</string>
    <string name="companion_age_group">COMPANION AGE GROUP</string>
    <string name="calculate">CALCULATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="details_text"><u>Details</u></string>

    <string-array name="sort_options">
        <item>Sort by Date</item>
        <item>Sort by Driver Name</item>
    </string-array>

    <string name="archived_qr_codes">Archived QR Codes</string>

    <string name="default_web_client_id">290930271329-tcfdhhlq0ac7t16dcdqed8t2harl70hq.apps.googleusercontent.com</string>

    <string name="new_password_edittext">Change Password</string>
    <string name="update_password_button">Update Password</string>

</resources>
